contacts form all fields added. css improved.

--- a/src/components/ContactsList.module.css
+++ b/src/components/ContactsList.module.css
@@ -6,3 +6,10 @@ div.contacts_list_item {
     padding: .5rem;
     border: 1px solid gray;
 }
+
+div.contacts_list_item_header {
+    padding: .5rem;
+    border: 1px solid gray;
+    font-size: 1.2rem;
+    color: lightseagreen;
+}
